<resources>

    <string name="app_name">DisMessenger</string>
    <string name="message">消息</string>
    <string name="friends">好友</string>
    <string name="dynamic">动态</string>
    <string name="default_sign">点击编辑签名</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="personal_data">个人资料</string>
    <string name="setting">设置中心</string>
    <string name="fast_file_transfer">文件快传</string>
    <string name="scan">扫一扫</string>
    <string name="feedback">问题反馈</string>
    <string name="help">获取帮助</string>
    <string name="about">关于软件</string>
    <string name="title_activity_personal_information">PersonalInformationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="name">名称：</string>
    <string name="sign">签名：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄：</string>
    <string name="birthday">生日：</string>
    <string name="constellation">星座：</string>
    <string name="occupation">职业：</string>
    <string name="location">所在地：</string>
    <string name="hometown">故乡：</string>
    <string name="close">关闭</string>
    <string name="add_friend">加好友</string>
    <string name="connecting_to_the_server">正在连接服务器...</string>
    <string name="new_friend">新朋友</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="search">搜索</string>
    <string name="group_chat">群聊</string>
    <string name="user">用户</string>
    <string name="find">查找</string>
    <string name="wait">请稍等...</string>
    <string name="not_find_user">查无此人</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>

</resources>
