<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchActivity">

    <include
        android:id="@+id/search_action_bar"
        layout="@layout/actionbar_layout" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#10000000"
        android:elevation="6dp"
        android:orientation="vertical"
        android:paddingBottom="0.1dp"
        app:layout_constraintTop_toBottomOf="@id/search_action_bar"
        tools:ignore="UnusedAttribute">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/search_bar_bg"
            android:padding="5dp">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textSize="14sp"
                android:inputType="number"
                tools:ignore="Autofill,LabelFor,TextFields" />


            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/search"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/search_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorPrimaryDark"
            app:tabIndicatorFullWidth="false"
            app:tabSelectedTextColor="@color/colorPrimaryDark"
            app:tabTextColor="@color/colorPrimary"
            app:tabUnboundedRipple="true"
            tools:ignore="UnusedAttribute">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_chat" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find" />

        </android.support.design.widget.TabLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/search_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

</android.support.constraint.ConstraintLayout>